--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # pip install -r requirements.txt -U
 requests==2.26.0
 argparse==1.4.0
-scikit-learn==0.24.2
 accelerate==0.6.0
-torch==1.9.0
 transformers==4.11.3
+torch
+scikit-learn
