--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # pip install -r requirements.txt -U
 requests==2.26.0
 argparse==1.4.0
-accelerate==0.6.0
-transformers==4.11.3
+accelerate
+transformers
 torch
 scikit-learn
